<?xml version="1.0" encoding="utf-8"?><!-- used to style each list item-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">

    <!-- sets the image center left all other content is to the right of the image-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/name_img"
        android:paddingLeft="10dp"
        app:srcCompat="@drawable/test" />

    <!--sets the name right of the imgae-->

    <TextView
        android:id="@+id/name"
        style="textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:paddingTop="5dp"
        android:text="@string/footballer"
        android:textSize="24sp"
        android:typeface="monospace" />

    <!-- sets the number stuck to the right of the screen-->

    <TextView
        android:id="@+id/f_num"
        style="textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:gravity="end|center"
        android:padding="10dp"
        android:text="@string/num"
        android:textSize="30sp"
        android:typeface="monospace" />

    <!-- second line of text under the name-->

    <TextView
        android:id="@+id/currentteam"
        style="textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@+id/imageView"
        android:text="@string/current_team"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/pos"
        style="textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@+id/currentteam"
        android:text="@string/position"
        android:textSize="16sp" />

</RelativeLayout>



